fix some problem

--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -70,7 +70,8 @@
    "outputs": [],
    "source": [
     "# 使用解析好的资源构建链表或者图\n",
-    "# 首先是设计图的节点类的结构，然后是边的关系，最后是图的结构\n"
+    "# 首先是设计图的节点类的结构，然后是边的关系，最后是图的结构\n",
+    "dasda"
    ]
   }
  ],
