--- a/data_clean.ipynb
+++ b/data_clean.ipynb
@@ -50,7 +50,7 @@
     "# 3. 判断语句种类\n",
     "# 4. 处理语句\n",
     "\n",
-    "def read_to_graph(filename,graph,nodelist):\n",
+    "def read_to_graph(filename,graph,nodelist,mapstack):\n",
     "    line_pos = 0\n",
     "    with open(filename, \"r\") as f:\n",
     "        for line in f:\n",
@@ -66,8 +66,7 @@
     "                    node = Node(res[1],[filename,line_pos])\n",
     "                    graph.add_vertex(node)\n",
     "                    # res[3]引用的都是(a,b,c)这种，里面没有括号，有括号的没有引用\n",
-    "                    # 姑且认为包括括号的都没有引用其他变量\n",
-    "                    \n",
+    "                    # 姑且认为包括括号的都没有引用其他变量   \n",
     "                    if \"=\" in res[3]:\n",
     "                        pass\n",
     "                    else:\n",
@@ -80,7 +79,6 @@
     "                                pass\n",
     "                                # print(val,end=\" \")\n",
     "                            elif(is_valid_variable(val.strip())):\n",
-    "                                #print(val,end=\" \")\n",
     "                                val_node = Node(val.strip(),[filename,line_pos])\n",
     "                                # a的链表不需要本次的引用，res[1]才需要本行，a的其他地方不需要本行。\n",
     "                                # graph.add_vertex(val_node)\n",
@@ -110,10 +108,11 @@
     "                            else:\n",
     "                                ext_node_list.append(node)\n",
     "\n",
+    "\n",
     "                    # 将存在的与不存在的进行连接\n",
     "                    for ex in ext_node_list:\n",
     "                        for dont in dontext_node_list:\n",
-    "                            # 比如用pBuf_13创建了pBuf_14，最后文件中pBuf_14依赖于pBuf_13，\n",
+    "                            # 比如用pBuf_13创建了pBuf0_14，最后文件中pBuf_14依赖于pBuf_13，\n",
     "                            # 访问pBuf_14的时候，需要去访问pBuf_13，所以是pBuf_14->pBuf_13\n",
     "                            graph.add_edge(dont,ex)\n",
     "\n",
@@ -133,6 +132,44 @@
     "                    # 将前面的资源与最后一个资源进行连接\n",
     "                    for i in range(len(node_list)-2):\n",
     "                        graph.add_edge(node_list[len(node_list)-1],node_list[i])\n",
+    "\n",
+    "                elif res[1] in map_func:    \n",
+    "                    # TODO: map和unmap必须成对存在，他们的特点是第一个resource一样\n",
+    "                    # 他们最后都需要连接到创建的资源上\n",
+    "                    if res[1] ==\"Map\":\n",
+    "                        ext_node_list = [] # 已经存在的节点，其实只有一个\n",
+    "                        dontext_node_list = [] # 不存在的节点，也只有以一个\n",
+    "                        for i in res[2]:\n",
+    "                            p_v = parse_func_assignment(i) #parameters and values\n",
+    "                            if(is_macro(p_v[1])):\n",
+    "                                pass\n",
+    "                            elif(is_decimal_or_hex(p_v[1])):\n",
+    "                                pass\n",
+    "                            elif(is_valid_variable(p_v[1])):\n",
+    "                                \n",
+    "                                # map的资源不需要加入到vertex中\n",
+    "                                node = Node(p_v[1],[filename,line_pos])\n",
+    "                                \n",
+    "                                if not graph.has_vertex(node):\n",
+    "                                    graph.add_vertex(node)\n",
+    "                                    dontext_node_list.append(node)\n",
+    "                                else:\n",
+    "                                    ext_node_list.append(node)\n",
+    "                        mapstack.push((ext_node_list[0],dontext_node_list[0]))\n",
+    "                    elif res[1]==\"Unmap\":\n",
+    "                        p_v = parse_func_assignment(res[2][0])\n",
+    "                        if(is_macro(p_v[1])):\n",
+    "                            pass\n",
+    "                        elif(is_decimal_or_hex(p_v[1])):\n",
+    "                            pass\n",
+    "                        elif(is_valid_variable(p_v[1])):\n",
+    "                             \n",
+    "                            if mapstack.top()[0].id == p_v[1]:\n",
+    "                                node = Node(p_v[1],[filename,line_pos])\n",
+    "                                graph.add_edge(mapstack.top()[1],mapstack.top()[0])\n",
+    "                                graph.add_edge(mapstack.top()[1],node)\n",
+    "                               \n",
+    "                                mapstack.pop()\n",
     "\n",
     "                elif res[1] in other_func:\n",
     "                    # TODO：如果在其他的函数中，保证加入到图中\n",
@@ -163,10 +200,11 @@
    "source": [
     "graph = Graph()\n",
     "nodelist = NodeList()\n",
+    "mapstack = MapStack()\n",
     "folder_path = '.\\output\\\\'\n",
     "file_list = read_dir(folder_path)\n",
     "for filename in file_list:\n",
-    "    read_to_graph(folder_path+filename,graph,nodelist)\n",
+    "    read_to_graph(folder_path+filename,graph,nodelist,mapstack)\n",
     "# graph.print_edges()\n",
     "\n",
     "node = Node(\"pBuf_13\",[])\n",
@@ -175,41 +213,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['.\\\\output\\\\3DMarkICFWorkload_3.sdx', 9]\n",
-      "['.\\\\output\\\\3DMarkICFWorkload_41.sdx', 4]\n",
-      "['.\\\\output\\\\3DMarkICFWorkload_42.sdx', 4]\n",
-      "['.\\\\output\\\\3DMarkICFWorkload_57.sdx', 8]\n",
-      "['.\\\\output\\\\3DMarkICFWorkload_58.sdx', 8]\n",
-      "--------------\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27296\\2514462088.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"--------------\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgraph\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_neighbors\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"bufDesc_26\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+      "['pBuf_46', 'pBuf_46']\n",
+      "['pBuf_46', 'bufDesc_47']\n",
+      "pMapRes_3200 ['.\\\\output\\\\3DMarkICFWorkload_41.sdx', 353]\n",
+      "pBuf_46 ['.\\\\output\\\\3DMarkICFWorkload_41.sdx', 353]\n",
+      "pBuf_46 ['.\\\\output\\\\3DMarkICFWorkload_41.sdx', 355]\n",
+      "pBuf_46 ['.\\\\output\\\\3DMarkICFWorkload_5.sdx', 27]\n",
+      "bufDesc_47 ['.\\\\output\\\\3DMarkICFWorkload_5.sdx', 27]\n",
+      "bufDesc_47 ['.\\\\output\\\\3DMarkICFWorkload_5.sdx', 26]\n"
      ]
     }
    ],
    "source": [
-    "a = graph.get_node(\"pBuf_13\")\n",
-    "for i in a:\n",
-    "    print(i.line_pos)\n",
-    "print(\"--------------\")\n",
-    "b = graph.get_neighbors(\"bufDesc_26\")\n",
-    "for i in b:\n",
-    "    print(i.id)"
+    "res = []\n",
+    "graph.dfs(\"pMapRes_3200\",res)\n",
+    "for i in  res:\n",
+    "    print(i.id,i.line_pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in graph.get_neighbors(\"pMapRes_3200\"):\n",
+    "    print(i.id,i.line_pos)"
    ]
   },
   {
